# OP1-Companion

./: .gitignore  01-wifi-hostapd.sh  01-wifi-hostapd2.sh  02-docker.sh  02-npm.sh  02-rust.sh  02-udev.sh  03-python-bootstrap.sh  LICENSE  README.md  runme.sh
MTP/: 99-op1companion.rules  mount-mtp  mount-mtp-background  umount-mtp
WIFI/: wifi-hostap.sh
op1Companion/: .coveragerc  .gitignore  Dockerfile  Procfile  README.md  app.json  autoapp.py  docker-compose.yml  package.json  webpack.config.js
op1Companion/assets/js/: main.js
op1Companion/op1Companion/: app.py  commands.py
op1Companion/op1Companion/public/: forms.py  views.py
op1Companion/supervisord_programs/: gunicorn.conf
op1Companion/tests/: conftest.py  factories.py  test_database.py  test_forms.py  test_functional.py  test_models.py
op1companion/: .coveragerc  .gitignore  Dockerfile  LICENSE  Makefile  Procfile  README.md  app.json  autoapp.py  docker-compose.yml  package.json  pyproject.toml  webpack.config.js
op1companion/assets/js/: main.js
op1companion/op1companion/: __init__.py  app.py  commands.py  views.py
op1companion/op1companion/public/: forms.py  views.py
op1companion/op1companion/templates/: base.html  index.html  index.html.orig  layout.html  nav.html
op1companion/op1companion/templates/public/: home.html
op1companion/op1companion/user/: models.py
op1companion/supervisord_programs/: gunicorn.conf
op1companion/tests/: conftest.py  factories.py  test_database.py  test_forms.py  test_functional.py  test_models.py  test_op1companion.py
(+5 files in other folders)
