[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "op1companion"
version = "1.0.0"
requires-python = ">=3.7"
dependencies = [
    "Flask>=2.1,<3",
    "bootstrap-flask",
]

[project.optional-dependencies]
dev = [
    "pytest>=7,<8",
    "flake8>=4,<5",
    "black>=22.6.0",
    "isort>=5.10.1",
    "mypy>=0.961,<1",
]

[tool.setuptools.package-data]
"*" = ["**/static/**/*", "**/templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
files = "op1companion,tests"
